--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "rendon",
+  "homepage": "https://jorendon.github.io/React",
+  "name": "React",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -30,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
