--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://jorendon.github.io/React",
-  "name": "React",
+  "homepage": "https://jorendon.github.io/rendon",
+  "name": "rendon",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
